LPからお問い合わせフォーム遷移させる

--- a/forms.html
+++ b/forms.html
@@ -13,7 +13,7 @@
     
     <section class="contact-form">
         <h2>お問い合わせフォーム</h2>
-        TODO: Google Formを埋め込む
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScGtKqNDatZWZEIKq7RqDziYvVPkUDt209Qco2MZWbhdD1JMg/viewform?embedded=true" width="640" height="897" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         <br>
     </section>
     
