プライバシーポリシーの更新

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -40,15 +40,15 @@
         <p>StepLens は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。</p>
         
         <h3>お問い合せ</h3>
-        <p>StepLens の個人情報の取扱に関するお問い合せは下記までご連絡ください。</p>
-        <p><a href="mailto:support@steplens.com">support@steplens.com</a></p>
+        <p>本サービスの個人情報の取扱に関するお問い合わせは、以下お問い合わせフォームよりご連絡ください。</p>
+        <p><a href="https://forms.gle/672J2kcW7SvDoSjV8" target="_blank">お問い合わせフォーム</a></p>
     </section>
     
     <footer>
         <nav>
             <a href="index.html">ホーム</a>
             <a href="terms.html">利用規約</a>
-            <a href="contact.html">問い合わせ</a>
+            <a href="forms.html">問い合わせ</a>
         </nav>
     </footer>
 </body>
